--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "html-webpack-plugin": "4.0.4",
     "mocha": "5.2.0",
     "nyc": "15.0.0",
-    "versiona": "4"
+    "versiona": "4",
+    "jsdom": "16.2.2",
+    "sinon": "9.0.2"
   },
   "eslintConfig": {
     "extends": [
