--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "phoenix": "rm -Rf node_modules && rm -Rf package-lock.json && npm i",
     "prepack": "npm run clean && npm run build",
     "test": "sui-test server --pattern '\"src/test/**/*Test.js\"'",
+    "integration-test": "sui-test server --pattern \"src/integration-test/**/*Test.js\"",
+    "test-all": "npm run test && npm run integration-test",
     "coverage": "nyc --reporter=html --exclude='\"src/test/**/*Test.js\"' npm run test",
     "coverage:ci": "nyc --reporter=cobertura --exclude='\"src/test/**/*Test.js\"' npm run test && codecov",
     "lint": "sui-lint js",
@@ -41,7 +43,9 @@
     "html-webpack-plugin": "4.0.4",
     "mocha": "5.2.0",
     "nyc": "15.0.0",
-    "versiona": "4"
+    "versiona": "4",
+    "jsdom": "16.2.2",
+    "sinon": "9.0.2"
   },
   "eslintConfig": {
     "extends": [
