--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "prepack": "npm run clean && npm run build",
     "test": "sui-test server --pattern '\"src/test/**/*Test.js\"'",
     "integration-test": "sui-test server --pattern \"src/integration-test/**/*Test.js\"",
-    "test-all": "npm run test && npm run integration-test",
+    "test-all": "npm run integration-test",
     "coverage": "nyc --reporter=html --exclude='\"src/test/**/*Test.js\"' npm run test",
     "coverage:ci": "nyc --reporter=cobertura --exclude='\"src/test/**/*Test.js\"' npm run test && codecov",
     "lint": "sui-lint js",
-    "check": "npm run lint && npm run test",
+    "check": "npm run lint && npm run test-all",
     "build": "babel src/main --out-dir dist",
     "versiona": "node versiona.js"
   },
