update coverage script

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "sui-test server --pattern '\"src/test/**/*Test.js\"'",
     "integration-test": "sui-test server --pattern \"src/integration-test/**/*Test.js\"",
     "test-all": "npm run integration-test",
-    "coverage": "nyc --reporter=html --exclude='\"src/test/**/*Test.js\"' npm run test",
-    "coverage:ci": "nyc --reporter=cobertura --exclude='\"src/test/**/*Test.js\"' npm run test && codecov",
+    "coverage": "nyc --reporter=html --exclude='\"src/test/**/*Test.js\"' npm run test-all",
+    "coverage:ci": "nyc --reporter=cobertura --exclude='\"src/test/**/*Test.js\"' npm run test-all && codecov",
     "lint": "sui-lint js",
     "check": "npm run lint && npm run test-all",
     "build": "babel src/main --out-dir dist",
